tests/typing/bad/testfile-constructor5-1.scala
class A(x: Int) { }
class B { var a: A = new A(1, 2) }
object Main { def main(args: Array[String]) { } }
